增加了Hold功能，当给某个界面发送EventMail的时候，如果这个界面不不存在，可以把信息存储进来，等那个界面主动来拿

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,3 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.2.0'
     compile project(':eventlibrary')
 }
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
