--- a/eventlibrary/build.gradle
+++ b/eventlibrary/build.gradle
@@ -21,8 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
 }
+
 ext {
     bintrayRepo = 'maven'
     bintrayName = 'EventMailer'                                //项目名字
@@ -33,8 +33,8 @@ ext {
 
     libraryDescription = '受EventBus启发所写的一个事件传递者'       //项目描述
 
-    siteUrl = 'https://github.com/ws123/VoiceLine'          //把项目分享到github后的项目地址
-    gitUrl = 'https://github.com/ws123/VoiceLine.git'       //分享后的项目git地址
+    siteUrl = 'https://github.com/ws123/EventMailer'          //把项目分享到github后的项目地址
+    gitUrl = 'https://github.com/ws123/EventMailer.git'       //分享后的项目git地址
 
     libraryVersion = '1.0.0'
 
@@ -48,3 +48,7 @@ ext {
 }
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
