--- a/eventlibrary/build.gradle
+++ b/eventlibrary/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 
-version = "1.0.1"                                //项目版本号
+version = "1.0.3"                                //项目版本号
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -27,7 +27,7 @@ ext {
     bintrayRepo = 'maven'
     bintrayName = 'EventMailer'                                //项目名字
 
-    publishedGroupId = 'com.carlos.event'                //GroupId,这个要别人引用的时候会用到，
+    publishedGroupId = 'com.carlos.eventmailer'                //GroupId,这个要别人引用的时候会用到，
     libraryName = 'Eventmailer'                         //这个是项目名字
     artifact = 'eventlibrary'                                   //artifactId，这个也是别人引用的时候，会用到
 
@@ -36,7 +36,7 @@ ext {
     siteUrl = 'https://github.com/ws123/EventMailer'          //把项目分享到github后的项目地址
     gitUrl = 'https://github.com/ws123/EventMailer.git'       //分享后的项目git地址
 
-    libraryVersion = '1.0.1'
+    libraryVersion = '1.0.3'
 
     developerId = 'carlos'                             //这个开发者id，自己写
     developerName = 'carlos'                           //这个是开发者名字
