--- a/eventlibrary/build.gradle
+++ b/eventlibrary/build.gradle
@@ -3,7 +3,6 @@ apply plugin: 'com.android.library'
 version = "1.4.0"                                //项目版本号
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 15
@@ -20,7 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 ext {
