--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation project(':eventlibrary')
 }
 task androidJavadocs(type: Javadoc) {
